--- a/src/FoxyLink.GlobalConfiguration/appsettings.json
+++ b/src/FoxyLink.GlobalConfiguration/appsettings.json
@@ -7,6 +7,11 @@
   "AccessData": {
     "DBConnection": {
       "ConnectionString": "server=*****; Database=*****; User=*****; Password=******;"
+    },
+    "RabbitMQ": {
+      "HostName": "krolik-01.ktc.local",
+      "UserName": "*****",
+      "Password": "*****"
     }
   }
 }
