--- a/src/FoxyLink.RabbitMQ/FoxyLink.RabbitMQ.csproj
+++ b/src/FoxyLink.RabbitMQ/FoxyLink.RabbitMQ.csproj
@@ -2,18 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <ApplicationIcon />
-    <OutputType>Exe</OutputType>
-    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DasMulli.Win32.ServiceUtils" Version="1.2.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.0-rc1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FoxyLink.GlobalConfiguration\FoxyLink.GlobalConfiguration.csproj" />
-    <ProjectReference Include="..\FoxyLink.RabbitMQ\FoxyLink.RabbitMQ.csproj" />
   </ItemGroup>
 
 </Project>
