Добавил пересылку сообщений к конечным точкам.

--- a/src/FoxyLink.GlobalConfiguration/appsettings.json
+++ b/src/FoxyLink.GlobalConfiguration/appsettings.json
@@ -5,13 +5,29 @@
     "ServiceDescription": "FoxyLink.RabbitMQ (extract, transform, deliver messages to the «1C:Enterprise 8» consumers)"
   },
   "AccessData": {
-    "DBConnection": {
-      "ConnectionString": "server=*****; Database=*****; User=*****; Password=******;"
-    },
+    "AppEndpoints": [
+      {
+        "Name": "yt11",
+        "Login": "",
+        "Password": "",
+        "Schema": "http",
+        "ServerName": "",
+        "PathOnServer": ""
+      },
+      {
+        "Name": "dt11",
+        "Login": "***",
+        "Password": "***",
+        "Schema": "http",
+        "ServerName": "wall-e.ktc.local:8085",
+        "PathOnServer": "dt/hs/AppEndpoint/v1"
+      }
+    ],
     "RabbitMQ": {
       "HostName": "krolik-01.ktc.local",
-      "UserName": "*****",
-      "Password": "*****"
+      "UserName": "***",
+      "Password": "***",
+      "InvalidMessageQueue": "1c.foxylink.invalid"
     }
   }
 }
