Добавил название очереди в GlobalConfiguration

--- a/src/FoxyLink.GlobalConfiguration/appsettings.json
+++ b/src/FoxyLink.GlobalConfiguration/appsettings.json
@@ -8,16 +8,16 @@
     "AppEndpoints": [
       {
         "Name": "yt11",
-        "Login": "",
-        "Password": "",
+        "Login": "*****",
+        "Password": "*****",
         "Schema": "http",
-        "ServerName": "",
-        "PathOnServer": ""
+        "ServerName": "1cweb.ktc.local:",
+        "PathOnServer": "yt11/hs/AppEndpoint/v1"
       },
       {
         "Name": "dt11",
-        "Login": "***",
-        "Password": "***",
+        "Login": "*****",
+        "Password": "*****",
         "Schema": "http",
         "ServerName": "wall-e.ktc.local:8085",
         "PathOnServer": "dt/hs/AppEndpoint/v1"
@@ -25,8 +25,9 @@
     ],
     "RabbitMQ": {
       "HostName": "krolik-01.ktc.local",
-      "UserName": "***",
-      "Password": "***",
+      "UserName": "*****",
+      "Password": "*****",
+      "MessageQueue": "1c.foxylink",
       "InvalidMessageQueue": "1c.foxylink.invalid"
     }
   }
