Обновил сервис оповещения о событиях.

--- a/src/FoxyLink.GlobalConfiguration/appsettings.json
+++ b/src/FoxyLink.GlobalConfiguration/appsettings.json
@@ -8,27 +8,27 @@
     "AppEndpoints": [
       {
         "Name": "yt11",
-        "Login": "*****",
-        "Password": "*****",
+        "Login": "login",
+        "Password": "password",
         "Schema": "http",
-        "ServerName": "1cweb.ktc.local:",
+        "ServerName": "1cweb.ktc.local:9292",
         "PathOnServer": "yt11/hs/AppEndpoint/v1"
       },
       {
         "Name": "dt11",
-        "Login": "*****",
-        "Password": "*****",
+        "Login": "login",
+        "Password": "password",
         "Schema": "http",
         "ServerName": "wall-e.ktc.local:8085",
         "PathOnServer": "dt/hs/AppEndpoint/v1"
       }
     ],
     "RabbitMQ": {
-      "HostName": "krolik-01.ktc.local",
-      "UserName": "*****",
-      "Password": "*****",
-      "MessageQueue": "1c.foxylink",
-      "InvalidMessageQueue": "1c.foxylink.invalid"
+      "AmqpUri": "amqp://login:password@host:port/vhost",
+      "InvalidMessageQueue": "1c.foxylink.invalid",
+      "MessageQueue": "1c.foxylink.test",
+      "NodesCount": 1,
+      "PrefetchCount": 5
     }
   }
 }
