#2, #3 Добавил подписку на несколько очередей, добавил повторные попытки отправки сообщения.

--- a/src/FoxyLink.GlobalConfiguration/appsettings.json
+++ b/src/FoxyLink.GlobalConfiguration/appsettings.json
@@ -21,14 +21,31 @@
         "Schema": "http",
         "ServerName": "wall-e.ktc.local:8085",
         "PathOnServer": "dt/hs/AppEndpoint/v1"
+      },
+      {
+        "Name": "buh",
+        "Login": "login",
+        "Password": "password",
+        "Schema": "http",
+        "ServerName": "buh.ktc.local",
+        "PathOnServer": "complex/hs/AppEndpoint/v1"
       }
     ],
     "RabbitMQ": {
-      "AmqpUri": "amqp://login:password@host:port/vhost",
-      "InvalidMessageQueue": "1c.foxylink.invalid",
-      "MessageQueue": "1c.foxylink.test",
-      "NodesCount": 1,
-      "PrefetchCount": 5
+      "AmqpUri": "amqp://login:password@rabbit-cluster-01.ktc.local/%2F",
+      "Queues": [
+        {
+          "Name": "foxylink",
+          "NodesCount": 1,
+          "PrefetchCount": 1
+        },
+        {
+          "Name": "1c.foxylink",
+          "NodesCount": 2,
+          "PrefetchCount": 2
+        }
+      ],
+      "RetryInMilliseconds": [ "30000", "60000", "300000", "900000", "1800000", "3600000", "7200000", "14400000" ]
     }
   }
 }
