Добавлена поддержка маршрутизации в Camunda BPM.

--- a/src/FoxyLink.Core/appsettings.json
+++ b/src/FoxyLink.Core/appsettings.json
@@ -29,6 +29,14 @@
         "Schema": "http",
         "ServerName": "buh.ktc.local",
         "PathOnServer": "complex/hs/AppEndpoint/v1"
+      },
+      {
+        "Name": "bpmn",
+        "Login": "login",
+        "Password": "password",
+        "Schema": "http",
+        "ServerName": "bpmn.ktc.local",
+        "PathOnServer": "engine-rest/message"
       }
     ],
     "RabbitMQ": {
@@ -43,6 +51,11 @@
           "Name": "1c.foxylink",
           "NodesCount": 2,
           "PrefetchCount": 2
+        },
+        {
+          "Name": "bpmn.order-cycle",
+          "NodesCount": 3,
+          "PrefetchCount": 1
         }
       ],
       "RetryInMilliseconds": [ "30000", "60000", "300000", "900000", "1800000", "3600000", "7200000", "14400000" ]
