Migration to .NET 8. Fix breaking changes during redelivering message

--- a/src/FoxyLink.RabbitMQ/FoxyLink.RabbitMQ.csproj
+++ b/src/FoxyLink.RabbitMQ/FoxyLink.RabbitMQ.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="5.1.0-rc1" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
   </ItemGroup>
 
   <ItemGroup>
