Add docker start support

--- a/src/FoxyLink.Core/appsettings.json
+++ b/src/FoxyLink.Core/appsettings.json
@@ -2,7 +2,7 @@
   "HostData": {
     "ServiceName": "FoxyLinkService",
     "ServiceDisplayName": "FoxyLink.RabbitMQ Service",
-    "ServiceDescription": "FoxyLink.RabbitMQ (extract, transform, deliver messages to the «1C:Enterprise 8» consumers)"
+    "ServiceDescription": "FoxyLink.RabbitMQ (extract, transform, deliver messages to the Â«1C:Enterprise 8Â» consumers)"
   },
   "AccessData": {
     "AppEndpoints": [
@@ -37,12 +37,14 @@
         {
           "Name": "foxylink",
           "NodesCount": 1,
-          "PrefetchCount": 1
+          "PrefetchCount": 1,
+          "QuorumQueue":  false
         },
         {
           "Name": "1c.foxylink",
           "NodesCount": 2,
-          "PrefetchCount": 2
+          "PrefetchCount": 2,
+          "QuorumQueue": false
         }
       ],
       "RetryInMilliseconds": [ "30000", "60000", "300000", "900000", "1800000", "3600000", "7200000", "14400000" ]
